cabal-version:       2.2
name:                sandcal
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://git.zenhack.net/zenhack/sandcal
license:             Apache-2.0
license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
copyright:           2020 Ian Denhardt
-- category:
  -- Codec
  -- Concurrency
  -- Control
  -- Data
  -- Database
  -- Development
  -- Distribution
  -- Game
  -- Graphics
  -- Language
  -- Math
  -- Network
  -- Sound
  -- System
  -- Testing
  -- Text
  -- Web

build-type:          Simple
extra-source-files:
    CHANGELOG.md
  , README.md
  , .gitignore

source-repository head
  type:     git
  branch:   master
  location: https://git.zenhack.net/zenhack/sandcal

common shared-opts
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
  build-depends:
      base >=4.13 && <5
    , zenhack-prelude ^>=0.1
    , blaze-html ^>=0.9.1
    , blaze-markup ^>=0.8.2
    , scotty ^>=0.11.5
    , sqlite-simple ^>=0.4.16
    , safe-exceptions ^>=0.1.7
    , text ^>=1.2.3
    , time ^>=1.9.3
    , parsec ^>=3.1.13
    , aeson ^>=1.4.6
    , heredoc ^>=0.2.0
    , http-types ^>=0.12.3
    , iCalendar ^>=0.4.0
    , data-default ^>=0.7.1
    , containers >=0.5.11 && <0.7
    , transformers ^>=0.5.6
    , bytestring ^>=0.10.10
    , case-insensitive ^>=1.2.1
    , network-uri ^>=2.6.2
    , mime ^>=0.4.0
    , base64-bytestring ^>=1.0.0
    , tz ^>=0.1
    , tzdata ^>=0.1
    , megaparsec ^>=8.0.0
    , uuid ^>=1.3.13
    , wai-extra ^>=3.0.29
  ghc-options:
    -Wall
    -Wno-missing-signatures
    -Wno-orphans
    -Werror
  default-language:    Haskell2010

executable sandcal
  import: shared-opts
  main-is: Main.hs
  other-modules:
      SandCal.DB
    , SandCal.Config
    , View
    , View.Common
    , View.Event
    , View.Home
    , View.Import
    , View.NewEvent
    , View.Week
    , Route
    , ICal
    , Sandstorm
    , DateParsers
    , Occurrences
  hs-source-dirs:      src

test-suite tests
  import: shared-opts
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
