cabal-version:       2.2
name:                sandcal
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://git.zenhack.net/zenhack/sandcal
license:             Apache-2.0
license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
copyright:           2020 Ian Denhardt
-- category:
  -- Codec
  -- Concurrency
  -- Control
  -- Data
  -- Database
  -- Development
  -- Distribution
  -- Game
  -- Graphics
  -- Language
  -- Math
  -- Network
  -- Sound
  -- System
  -- Testing
  -- Text
  -- Web

build-type:          Simple
extra-source-files:
    CHANGELOG.md
  , README.md
  , .gitignore

source-repository head
  type:     git
  branch:   master
  location: https://git.zenhack.net/zenhack/sandcal

common shared-opts
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
  build-depends:
      base >=4.13 && <5
    , zenhack-prelude ^>=0.1
    , blaze-html ^>=0.9.1
    , blaze-markup ^>=0.8.2
    , cryptonite >=0.29 && <0.31
    , scotty ^>=0.12
    , sqlite-simple ^>=0.4.16
    , safe-exceptions ^>=0.1.7
    , text ^>=1.2.3
    , time >=1.9 && <1.14
    , parsec ^>=3.1.13
    , aeson ^>=2.0.1
    , heredoc ^>=0.2.0
    , http-types ^>=0.12.3
    , iCalendar ^>=0.4.0
    , data-default ^>=0.7.1
    , containers >=0.5.11 && <0.7
    , transformers >=0.5.6 && <0.7
    , bytestring >=0.10.10 && < 0.12
    , case-insensitive ^>=1.2.1
    , network-uri >=2.6.2 && <2.8
    , mime ^>=0.4.0
    , base64-bytestring >=1.0 && <1.3
    , tz ^>=0.1
    , tzdata ^>=0.2
    , megaparsec ^>=9.2.0
    , memory >=0.16 && <0.18
    , uuid ^>=1.3.13
    , wai-extra ^>=3.1.7
  default-language:    Haskell2010

library libsandcal
  import: shared-opts
  exposed-modules:
      LibMain
    , DB
    , Config
    , Forms.Common
    , Forms.NewEvent
    , View
    , View.Common
    , View.Event
    , View.Home
    , View.Import
    , View.NewEvent
    , View.EditEvent
    , View.Week
    , Route
    , Sandstorm
    , Occurrences
    , Util.CSRF
    , Util.ICal
    , Util.Scotty.Cookie
    , Util.Scotty.DateParsers
    , Util.Time
    , Util.TZ
    , FindLinks
  hs-source-dirs: src

executable sandcal
  import: shared-opts
  main-is: Main.hs
  build-depends: libsandcal
  hs-source-dirs: exe

executable gen-elm
  import: shared-opts
  main-is: GenElm.hs
  hs-source-dirs: exe

test-suite tests
  import: shared-opts
  type: exitcode-stdio-1.0
  build-depends:
      libsandcal
    , hspec >=2.8.3 && <2.10
    , hspec-hedgehog ^>=0.0.1
    , hedgehog >=1.0.2 && <1.2
  other-modules:
      Tests.Util.Time
    , Tests.FindLinks
  hs-source-dirs: tests
  main-is: Main.hs
